--- a/public/index.html
+++ b/public/index.html
@@ -1,2 +1,21 @@
-<div id="container"></div>
-<script src="titanic.js"></script>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="stylesheet" type="text/css" href="visual.css">
+  <title>Document</title>
+</head>
+
+<body>
+  <div class="container">
+    <div id="visual"></div>
+    <span class="tooltip">Tooltip text</span>
+  </div>
+  <script src="titanic.js"></script>
+  <script src="visual.js"></script>
+</body>
+
+</html>
